# goit-algo-hw-05

./: README.md  main.py  pyproject.toml
